--- a/changes_sjf.rmd
+++ b/changes_sjf.rmd
@@ -264,4 +264,37 @@ smo_current_output <- function() {
 test_output(smo_current_output, smo_dev)
 ```
 
-Success was achieved, then seed fixing was removed. Next we will break the function up into smaller ones to generate each plot individually.
+Success was achieved. Next we will break the function up into smaller ones to generate each plot individually and unit test again:
+
+```{r check_smo2}
+smo_dev2 <- function() {
+    par(mfrow=c(2,2))
+    c_inc <- cumulative_incidence(registry_data$entrydate, start = "2004-01-30", num_years = 9)
+    ordered_diagnoses <- c_inc$ordered_diagnoses
+    cum_inc <- c_inc$cumulative_incidence
+    smooth <- c_inc$smooth
+
+    plot(ordered_diagnoses, cum_inc, pch=20, 
+     cex=0.7, xlab="days", ylab="cumulative diagnoses")
+    abline(a=0, b=length(ordered_diagnoses)/ordered_diagnoses[length(ordered_diagnoses)], 
+       col="red", lwd=2)
+    lines(smooth, col="green", lwd=2)
+
+    plot(ordered_diagnoses, cum_inc - predict(smooth, ordered_diagnoses)$y, 
+     type="l", xlab="days", ylab="deviation from smooth")
+
+    inspect_incidence(c_inc)
+    poisson_incidence_sim(c_inc)
+}
+```
+
+```{r check_smo_current2}
+smo_current_output2 <- function() {
+  par(mfrow=c(2,2))
+  smoothed_incidence(registry_data$entrydate, start = "2004-01-30", num_years = 9)
+}
+```
+
+```{r check_smo_comp2, message=T, cache=TRUE}
+test_output(smo_current_output2, smo_dev2)
+```
