Removed seed spec in smoothed incidence functions

--- a/changes_sjf.rmd
+++ b/changes_sjf.rmd
@@ -347,3 +347,5 @@ smo_current_output2 <- function() {
 ```{r check_smo_comp2, message=T, cache=TRUE}
 test_output(smo_current_output2, smo_dev2)
 ```
+
+Success was achieved, so we took out the random number seed specification.
