--- a/changes_sjf.rmd
+++ b/changes_sjf.rmd
@@ -91,10 +91,10 @@ test_output(countprev_current_output, countprev_dev)
 
 ```{r check_prevalence, cache=TRUE}
 prevalence_total <- prevalence(Surv(time, status) ~ sex(sex) + age(age) + entry(entrydate),
-                               registry_data, N_years = 10, cure_time = 10*365, 
+                               registry_data, num_years_to_estimate = 10, cure_time = 10*365, 
                                start='2004-01-30', num_reg_years=9)
 
-by_year_total <- prevalence_total[[1]]
+by_year_total <- prevalence_total$simulated_cases
 
 prevchisq_dev <- function() {
   prev_chisq(registry_data$entrydate,
