--- a/TODO
+++ b/TODO
@@ -4,3 +4,4 @@
   - How should prevalence_by_age (and possibly others, n_years_estimate?) behave when num_registry_years >= num_prevalent_years? Currently, prevalence_by_age only calculates age distribution of the simulated years, should it be renamed to reflect this? Should it incorporate the prior age distribution? At the very least this needs to be highlighted in the documentation.
   - Rename prevalence attributes (i.e. 'samples' not very descriptive)
   - Consistent argument names across functions (i.e. entry or entrydate, event or eventdate, num_years or num_reg_years)
+  - Rename meanIR to mean_incidence_rate? Or even something more descriptive, as meanIR implies it just calculates the mean when the main selling point is its standard error estimation
