--- a/vignettes/prevR-vignette-short.Rmd
+++ b/vignettes/prevR-vignette-short.Rmd
@@ -169,7 +169,7 @@ summary(wb)
 
 ### Counts
 
-In the first instance, prevalence can be estimated by counting from the registry data. When doing this using the supplied synthetic dataset, it is important to note that there is a discrepency between the last recorded incident case and the last date of follow-up owing to a systematic difference in incidence and survival data collection, micking the process at HMRN. All the survival data for the available incident cases is used for survival modelling, however the prevalence estimate works back by year from an "index date", which is the last date of the last year of registry data, as the number of incident cases must be complete for simulating prevalence. Therefore, `r max(registry_data$entrydate)` is the index date for this synthetic dataset. In `counted_prevalence()`, all cases alive after the index date are censored. 
+In the first instance, prevalence can be estimated by counting from the registry data. When doing this using the supplied synthetic dataset, it is important to note that there is a discrepency between the last recorded incident case and the last date of follow-up owing to a systematic difference in incidence and survival data collection, micking the process at HMRN. All the survival data for the available incident cases is used for survival modelling, however the prevalence estimate works back by year from an "index date", which is the last date of the last year of registry data, as it is imperative that the number of incident cases is complete for simulating prevalence. Therefore, `last(determine_registry_years(start='2004-01-30', num_reg_years=9))` is the index date for this synthetic dataset. In `counted_prevalence()`, all cases alive after the index date are censored. 
 
 ```{r survival, error = TRUE}
 counted_prevalence(registry_data$entrydate, 
@@ -188,8 +188,6 @@ prevalence_total <- prevalence(Surv(time, status) ~ sex(sex) + age(age) + entry(
                                start='2004-01-30', num_reg_years=9)
 
 print(prevalence_total)
-
-summary(prevalence_total)
 ```
 
 ### Comparison and substitution between simulated and counted prevalence
@@ -206,6 +204,8 @@ prev_chisq(registry_data$entrydate,
            by_year = by_year_total)
 ```
 
+### N-year prevalence with estimation of uncertainty
+
 Up until now, the simulated values of prevalent cases for the first years before the index date have been used. Here we replace these with the observed values:
 
 ```{r hist1, fig.width = 6, fig.height = 4, error = TRUE}
@@ -213,8 +213,23 @@ observed <- counted_prevalence(registry_data$entrydate,
                                registry_data$eventdate, 
                                registry_data$status, 
                                start='2004-01-30', num_reg_years=9)
-predicted <- rev(by_year_total[1:9])
-by_year_total[1:9] <- rev(observed)
+
+summary.prevalence(prevalence_total)
+
+prevalence_total$simulated_cases[1:9] <- rev(observed)
+
+summary.prevalence(prevalence_total)
+```
+
+As a way to estimate uncertainty of our survival model, i.e. sampling variation, the prevalence function calculates bootstrapped survival coefficients. `n_year_estimates` is a function to calculate the estimated number of *n-year* prevalent cases for any *n* up to the number of years estimated in the prevalence object. It returns the absolute numerical estimate as well as an estimate of the prevalence proportion and confidence intervals for the prevalence proportion:
+
+```{r nyrest3, error = TRUE} 
+
+n_year_estimates(prevalence_total, num_years_to_estimate = 3, population_size = 3500000)
+
+n_year_estimates(prevalence_total, num_years_to_estimate = 5, population_size = 3500000)
+
+n_year_estimates(prevalence_total, num_years_to_estimate = 10, population_size = 3500000)
 ```
 
 ### Age distribution of prevalent cases
@@ -222,6 +237,9 @@ by_year_total[1:9] <- rev(observed)
 The age distribution of simulated prevalent cases can be viewed as a histogram and compared with counted prevalent cases:
 
 ```{r, fig.height = 4, fig.width = 7}
+predicted <- rev(by_year_total[1:9])
+by_year_total[1:9] <- rev(observed)
+
 registry_data_r$status2 <- ifelse(registry_data_r$eventdate > "2013-01-30", 
                                   0, registry_data_r$status)
 observed_post_age_dist_total <- 
@@ -237,22 +255,4 @@ hist(post_age_dist_total,
 legend("topleft", legend = c("Observed", "Predicted"), bty = "n", lty = 1, 
        col = c(rgb(0.1, 0.1, 0.1, 0.5),
                rgb(0.8, 0.8, 0.8, 0.5)))
-```
-
-The age distribution of prevalent cases in the predicted years only can also be retrieved using `ageoutput` on the prevalence object:
-
-```{r output2, error = TRUE}
-prevalence_by_age(prevalence_total, age_intervals=seq(10, 100, by=10))
-```
-
-### N-year prevalence with estimation of uncertainty
-
-As a way to estimate uncertainty of our survival model, i.e. sampling variation, the prevalence function calculates bootstrapped survival coefficients. `n_year_estimates` is a function to calculate the estimated number of *n-year* prevalent cases for any *n* up to the number of years estimated in the prevalence object. It returns the absolute numerical estimate as well as an estimate of the prevalence proportion and confidence intervals for the prevalence proportion:
-
-```{r nyrest3, error = TRUE} 
-n_year_estimates(prevalence_total, num_years_to_estimate = 3, population_size = 3500000)
-
-n_year_estimates(prevalence_total, num_years_to_estimate = 5, population_size = 3500000)
-
-n_year_estimates(prevalence_total, num_years_to_estimate = 10, population_size = 3500000)
 ```
