--- a/vignettes/prevR-vignette-short.Rmd
+++ b/vignettes/prevR-vignette-short.Rmd
@@ -10,6 +10,7 @@ vignette: >
 ---
 
 This document demonstrates how predictions of prevalence are calculated from a synthetic patient dataset. 
+
 ```{r, echo = FALSE, message = FALSE}
 library(devtools)
 devtools::load_all()
@@ -24,30 +25,28 @@ library(rms)
 library(survival)
 library(knitr)
 library(tidyr)
-library(ggplot2)
 library(dplyr)
-load("H:/Repos/prevR/data/prevsim.rda")
-registry_data <- prevsim
+data(prevsim)
 num_years_to_estimate <- 10
 cure <- 3
 
-summary(registry_data)
+summary(prevsim)
 ```
 
 ```{r basicsurvival, fig.height=4, fig.width=7}
-survf <- survfit(Surv(time, status) ~ sex, data=registry_data)
+survf <- survfit(Surv(time, status) ~ sex, data=prevsim)
 plot(survf, lwd=2, col = c(1:2), xlab="survival (days)", ylab="probability")
 legend(3000, 1, c("Males", "Females"), lty = 1, col=c(1:2))
 ```
 
-*prevsim* is a synthesised dataset to resemble registry data, such as that found in HMRN. Incident cases are recorded from `r min(registry_data$entrydate)` to `r max(registry_data$entrydate)`, and events occur between `r min(registry_data$eventdate)` and `r max(registry_data$eventdate)`. `cure` represents the survival model used in the predictions, i.e. 3 means a patient can be considered cured 3 years after diagnosis, and therefore from this point onwards their survival is modelled using population data rather than patient data. `num_years_to_estimate` corresponds to the number of preceding years for which prevalence is predicted. 
+*prevsim* is a synthesised dataset to resemble registry data, such as that found in HMRN. Incident cases are recorded from `r min(prevsim$entrydate)` to `r max(prevsim$entrydate)`, and events occur between `r min(prevsim$eventdate)` and `r max(prevsim$eventdate)`. `cure` represents the survival model used in the predictions, i.e. 3 means a patient can be considered cured 3 years after diagnosis, and therefore from this point onwards their survival is modelled using population data rather than patient data. `num_years_to_estimate` corresponds to the number of preceding years for which prevalence is predicted. 
 
 ## Incidence
 
 The following code calculates absolute incidence of disease for each selected year of the registry:
 
 ```{r totalincidence, error = TRUE}
-raw_incidence <- incidence(registry_data$entrydate, start="2004-01-30", 9)
+raw_incidence <- incidence(prevsim$entrydate, start="2004-01-30", 9)
 raw_incidence
 ```
 
@@ -59,7 +58,7 @@ sim_check(raw_incidence)
 
 ```{r, fig.width = 7, fig.height = 7, include = TRUE, results="hide"}
 par(mfrow=c(2,2))
-c_inc <- cumulative_incidence(registry_data$entrydate, start = "2004-01-30", num_reg_years = 9)
+c_inc <- cumulative_incidence(prevsim$entrydate, start = "2004-01-30", num_reg_years = 9)
 ordered_diagnoses <- c_inc$ordered_diagnoses
 smooth <- c_inc$smooth
 
@@ -84,15 +83,15 @@ summary.incidence(c_inc)
 The age distribution of incident cases can also be inspected:
 
 ```{r incidenceage, fig.width = 7, fig.height = 4, error = TRUE}
-registry_data_r <- registry_data[registry_data$entrydate >= "2004-01-30", ]
+prevsim_r <- prevsim[prevsim$entrydate >= "2004-01-30", ]
 
-incidence_age_distribution(registry_data_r$age)
+incidence_age_distribution(prevsim_r$age)
 ```
 
 To calculate the mean incidence rate per 100,000 within the study population `meanIR` is used, which requires an estimate of the size of the population at risk:
   
 ```{r incidencerate, error = TRUE}
-meanIR(registry_data$entrydate, population_size = 3500000,
+meanIR(prevsim$entrydate, population_size = 3500000,
        start = "2004-01-30", num_reg_years = 9)
 ```
 
@@ -103,14 +102,14 @@ It is recommended that the user inspects the survival data for consistency betwe
 ```{r survivaldiag, fig.width = 7, fig.height = 7}
 par(mfrow=c(2,2))
 
-km <- survfit(Surv(time, status) ~ 1, data=registry_data_r)
+km <- survfit(Surv(time, status) ~ 1, data=prevsim_r)
 plot(km, lwd=2, col="blue", xlab="survival (days)", ylab="probability")
 
 ages = c(55, 65, 75, 85, 100)
-km2 <- survfit(Surv(time, status) ~ cut(age, breaks=ages), data=registry_data_r)
+km2 <- survfit(Surv(time, status) ~ cut(age, breaks=ages), data=prevsim_r)
 plot(km2, lwd=2, col=1:length(ages), xlab="survival (days)", ylab="probability")
 
-cx <- coxph(Surv(time, status) ~ age, data=registry_data_r)
+cx <- coxph(Surv(time, status) ~ age, data=prevsim_r)
 cxp <- survfit(cx, 
                newdata=data.frame(age=vapply(seq(length(ages) - 1), 
                                                 function(i) mean(c(ages[i], ages[i + 1])), 
@@ -124,9 +123,9 @@ num_reg_years <- 9
 registry_years <- determine_registry_years(start='2004-01-30', num_reg_years=num_reg_years)
 sapply(seq(num_reg_years),
        function(i) lines(survfit(Surv(time, status) ~ 1, 
-                                 data=registry_data_r[registry_data_r$entrydate >= 
+                                 data=prevsim_r[prevsim_r$entrydate >= 
                                                           registry_years[i] & 
-                                                          registry_data_r$entrydate < 
+                                                          prevsim_r$entrydate < 
                                                           registry_years[i + 1], ]), 
                          mark.time = F, conf.int = F))
 cox.zph(cx)
@@ -137,7 +136,7 @@ cox.zph(cx)
 `functional_form_age()` is provided so that the user can determine if modelling the effect of age as linear is appropriate. 
 
 ```{r ageform2, fig.width = 7, fig.height = 4, error = TRUE}
-functional_form_age(Surv(time, status) ~ age(age), registry_data_r)
+functional_form_age(Surv(time, status) ~ age(age), prevsim_r)
 ```
 
 ### Population survival
@@ -161,7 +160,7 @@ legend("topright", legend = c("Males", "Females"),
 We model survival in our patient cohort using a Weibull distribution. This is calculated within the prevalence function, however, it is important to look at `summary(wb)` for diagnostic information and to assess the model fit. 
 
 ```{r weibull, error = TRUE}
-wb <- survreg(Surv(time, status) ~ age + sex, data=registry_data_r)
+wb <- survreg(Surv(time, status) ~ age + sex, data=prevsim_r)
 summary(wb)
 ```
 
@@ -172,9 +171,9 @@ summary(wb)
 In the first instance, prevalence can be estimated by counting from the registry data. When doing this using the supplied synthetic dataset, it is important to note that there is a discrepency between the last recorded incident case and the last date of follow-up owing to a systematic difference in incidence and survival data collection, micking the process at HMRN. All the survival data for the available incident cases is used for survival modelling, however the prevalence estimate works back by year from an "index date", which is the last date of the last year of registry data, as it is imperative that the number of incident cases is complete for simulating prevalence. Therefore, `last(determine_registry_years(start='2004-01-30', num_reg_years=9))` is the index date for this synthetic dataset. In `counted_prevalence()`, all cases alive after the index date are censored. 
 
 ```{r survival, error = TRUE}
-counted_prevalence(registry_data$entrydate, 
-                     registry_data$eventdate, 
-                     registry_data$status, 
+counted_prevalence(prevsim$entrydate, 
+                     prevsim$eventdate, 
+                     prevsim$status, 
                      start="2004-01-30", 9)
 ```
 
@@ -184,7 +183,7 @@ Prevalence can now be estimated using simulation by calling `prevalence()`:
 
 ```{r prevalencetotal, error = TRUE}
 prevalence_total <- prevalence(Surv(time, status) ~ sex(sex) + age(age) + entry(entrydate),
-                               registry_data, num_years_to_estimate, cure, 
+                               prevsim, num_years_to_estimate, cure, 
                                start='2004-01-30', num_reg_years=9)
 
 print(prevalence_total)
@@ -197,9 +196,9 @@ Whether the model is predicting good numbers for the recent years for which we h
 ```{r test, error = TRUE}
 by_year_total <- prevalence_total$simulated_cases
 
-prev_chisq(registry_data$entrydate, 
-           registry_data$eventdate, 
-           registry_data$status, 
+prev_chisq(prevsim$entrydate, 
+           prevsim$eventdate, 
+           prevsim$status, 
            start="2004-01-30", 9,
            by_year = by_year_total)
 ```
@@ -209,9 +208,9 @@ prev_chisq(registry_data$entrydate,
 Up until now, the simulated values of prevalent cases for the first years before the index date have been used. Here we replace these with the observed values:
 
 ```{r hist1, fig.width = 6, fig.height = 4, error = TRUE}
-observed <- counted_prevalence(registry_data$entrydate, 
-                               registry_data$eventdate, 
-                               registry_data$status, 
+observed <- counted_prevalence(prevsim$entrydate, 
+                               prevsim$eventdate, 
+                               prevsim$status, 
                                start='2004-01-30', num_reg_years=9)
 
 summary.prevalence(prevalence_total)
@@ -224,7 +223,6 @@ summary.prevalence(prevalence_total)
 As a way to estimate uncertainty of our survival model, i.e. sampling variation, the prevalence function calculates bootstrapped survival coefficients. `n_year_estimates` is a function to calculate the estimated number of *n-year* prevalent cases for any *n* up to the number of years estimated in the prevalence object. It returns the absolute numerical estimate as well as an estimate of the prevalence proportion and confidence intervals for the prevalence proportion:
 
 ```{r nyrest3, error = TRUE} 
-
 n_year_estimates(prevalence_total, num_years_to_estimate = 3, population_size = 3500000)
 
 n_year_estimates(prevalence_total, num_years_to_estimate = 5, population_size = 3500000)
@@ -234,16 +232,16 @@ n_year_estimates(prevalence_total, num_years_to_estimate = 10, population_size =
 
 ### Age distribution of prevalent cases
 
-The age distribution of simulated prevalent cases can be viewed as a histogram and compared with counted prevalent cases:
+The age distribution of simulated prevalent cases can be viewed as a histogram and compared with the age distribution of counted prevalent cases:
 
 ```{r, fig.height = 4, fig.width = 7}
 predicted <- rev(by_year_total[1:9])
 by_year_total[1:9] <- rev(observed)
 
-registry_data_r$status2 <- ifelse(registry_data_r$eventdate > "2013-01-30", 
-                                  0, registry_data_r$status)
+prevsim_r$status2 <- ifelse(prevsim_r$eventdate > "2013-01-30", 
+                                  0, prevsim_r$status)
 observed_post_age_dist_total <- 
-  registry_data_r$age[registry_data_r$status2 == 0]
+  prevsim_r$age[prevsim_r$status2 == 0]
 
 post_age_dist_total <- prevalence_total$post_covar
 
